add all file python/html

--- a/Tutor Class/HTML Tutorial/92-Hyer Link In Image.html
+++ b/Tutor Class/HTML Tutorial/92-Hyer Link In Image.html
@@ -7,7 +7,7 @@
 		</head>
 		<body>
 			<!--Image Tag-->
-			<a href="raman.jpg"><img src="raman.jpg" alt="Raman Thakur"></a>
+			<a href="raman.jpg"><img src="raman.jpg" alt="Raman Thakur"></a><!--when we add a hyper link in image theen we tap on a photo so photo auto zoom and auto zoom out-->
 			
 		</body>
 	</html>
