--- a/Tutor Class/HTML Tutorial/91-image Tag.html
+++ b/Tutor Class/HTML Tutorial/91-image Tag.html
@@ -7,7 +7,7 @@
 		</head>
 		<body>
 			<!--Image Tag-->
-			<img src="raman.jpg" width="200px" alt="Raman Thakur">
+			<img src="raman.jpg" width="200px" alt="Raman Thakur"><!-- when we use alt attribute then google understand that specific and help in serching-->
 
 		</body>
 	</html>
