--- a/Tutor Class/HTML Tutorial/98-(2)Marge table in HTML.html
+++ b/Tutor Class/HTML Tutorial/98-(2)Marge table in HTML.html
@@ -5,26 +5,26 @@
 		</head>
 		<body>
 		<!--Merge table inhtml-->
-				<table style="border: 1px solid black; white-space: nowrap; width: 400">	
+				<table border="1" style="border-collapse: collapse; white-space: nowrap; width: 400;">	
 					<tr>
-						<th rowspan ="2" style="	border: 1px; white-space: nowrap; background-color: yellowgreen; width: 200;"> Name</th>					
-						<th rowspan ="2" style="	border: 1px; white-space: nowrap; background-color: yellowgreen; width: 200">10th</th>						
-						<th rowspan ="2" style="	border: 1px; white-space: nowrap; background-color: yellowgreen; width: 200">12th</th>					
-						<th style="	border: 1px; white-space: nowrap; background-color: yellowgreen; width: 200">Graduation</th>
+						<th rowspan ="2" style="border: 1.5px solid black ;white-space: nowrap; background-color: yellowgreen; width: 200;"> Name</th>					
+						<th rowspan ="2" style="border: 1.5px solid black ;white-space: nowrap; background-color: yellowgreen; width: 200">10th</th>						
+						<th rowspan ="2" style="border: 1.5px solid black ;white-space: nowrap; background-color: yellowgreen; width: 200">12th</th>					
+						<th style=" border: 1.5px solid black ;white-space: nowrap; background-color: yellowgreen; width: 200">Graduation</th>
 					<tr>
-						<th style="	border: 1px; white-space: nowrap; background-color: yellowgreen; width: 200">Post-Graduation</th>		
+						<th style=" border: 1.5px solid black ;white-space: nowrap; background-color: yellowgreen; width: 200">Post-Graduation</th>		
 					</tr>
 					</tr>
-					<tr style="border: 1px solid black;">
-						<td style="	border: 1px; white-space: nowrap; background-color: yellowgreen; width: 60px; text-align: center;"> Raman</td>
-						<td style="	border: 1px; white-space: nowrap; background-color: yellowgreen; width: 150px; text-align: center;"> A.A.A. inter collage</td>
-						<td style="	border: 1px; white-space: nowrap; background-color: yellowgreen; width: 200px;text-align: center;">H.M.S Islamia Inter Collage</td>
+					<tr>
+						<td style=" border: 1.5px solid black ;white-space: nowrap; background-color: yellowgreen; width: 200px;text-align: center;">H.M.S Islamia Inter Collage</td>
+						<td style=" border: 1.5px solid black ;white-space: nowrap; background-color: yellowgreen; width: 150px; text-align: center;"> A.A.A. inter collage</td>
+						<td style=" border: 1.5px solid black ;white-space: nowrap; background-color: yellowgreen; width: 60px; text-align: center;"> Raman</td>
 						<td rowspan="2" style="	border: 1px; white-space: nowrap; background-color: yellowgreen; width: 120; text-align: center;">C.S.J.M.U.</td>						
 					</tr>
 					<tr>
-						<td style="	border: 1px; white-space: nowrap; background-color: yellowgreen; width: 60px; text-align: center;">Mangal</td>
-						<td style="	border: 1px; white-space: nowrap; background-color: yellowgreen; width: 180px; text-align: center;"> S.M. Motijil inter collage</td>
-						<td style="	border: 1px; white-space: nowrap; background-color: yellowgreen; width: 200px;text-align: center;">S.M. Motijil Inter Collage</td>
+						<td style=" border: 1.5px solid black ;white-space: nowrap; background-color: yellowgreen; width: 60px; text-align: center;">Mangal</td>
+						<td style=" border: 1.5px solid black ;white-space: nowrap; background-color: yellowgreen; width: 180px; text-align: center;"> S.M. Motijil inter collage</td>
+						<td style=" border: 1.5px solid black ;white-space: nowrap; background-color: yellowgreen; width: 200px;text-align: center;">S.M. Motijil Inter Collage</td>
 					</tr>
 
 				</table>
