add all html file

--- a/Tutor Class/HTML Tutorial/4-Basic Code fomating.html
+++ b/Tutor Class/HTML Tutorial/4-Basic Code fomating.html
@@ -8,7 +8,8 @@
 		<body>
 			<!--basic formatting tags-->
 			<b>Hello <br><b>I Am Raman</b><br>      <!--<b> bold tag it use for normal bold formating-->
-			<p align="center">Hello <p><br> <p align="center">I Am Raman<p><br>
+			<p align="center">Hello </p><br> 
+			<p align="center">I Am Raman</p><br>
 			<strong> Raman Thakur</strong><br>    <!--<strong> strong tag it use for google analytic(in search give priority) and bold for both bold formating-->
 			<i>italic tag</i><br>		          <!--is use normalay italic formating-->
 			<em>emaphasis tag</em><br>            <!--<em> it use to understanding for google-->
