--- a/Tutor Class/HTML Tutorial/9-Internal HyperLink .html
+++ b/Tutor Class/HTML Tutorial/9-Internal HyperLink .html
@@ -8,11 +8,11 @@
 		<body>
 			<!--hyper link(internal link (agar ham kis bhi hyper link per tap kare or vo usi  page per khule use extrnal hpyer link kehte hai ))in html -->
 			<h1>
-				<p id="GO UP"</p>
-				<a href="#My_Portfolio">Raman Thakur </a></h1><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-				<p style="display:block;text-align:center;">CURRICULM VITAE<p><hr width="200" align="center"><br><br><br><br>
-				<p id="My_Portfolio">
-				<pre style="display:block; text-align:left; color: magenta;">CURRICULM VITAE     
+				<p id="GO UP"></p>
+				<a href="#My_Portfolio">My_Portfolio</a></h1><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+				<p style="display:block;text-align:center;">CURRICULM VITAE</p><!--# use for give internal link-->
+					<hr width="200" align="center" color="brown"><br><br><br><br>
+				<p id="My_Portfolio"></p><!--second way <a name="my_Portfolio"--><pre style="display:block; padding: 10px;; color: magenta;">CURRICULM VITAE     
 
                                                                  
 RAMAN KUMAR											         <img src="raman.jpg" width="200px">
@@ -22,7 +22,7 @@ Contact No: +91- 6396295383
           
 CAREER OBJECTIVE :         
 To work in a competitive environment that effectively utilizes my analytical, interpersonal, leadership<br>and organizational skills to conceive and achieve solutions. The solutions which help the organization in <br>not only meeting its targets, but also allowing it to grow, thereby, enhancing my own skills as an<br>individual and as a key player in the organization's development.
-.
+
 EXPERIENCE:                                                                                                                                
 
 EMPLOYER: Saptagon Pvt. Ltd. Company, Gurgaon [Haryana] 
@@ -93,7 +93,7 @@ I hereby declare that all the above-mentioned details are in accordance with the
 ---------------------------
 RAMAN 
 				</pre>
-				<a href="#GO UP">Go UP</a>
+				<a href="#" target="_blank" style="a:hover">subscibe </a>
 
 		</body>
 	</html>
