--- a/Tutor Class/HTML Tutorial/8-Hyperlink InHTMl.html
+++ b/Tutor Class/HTML Tutorial/8-Hyperlink InHTMl.html
@@ -6,7 +6,7 @@
 			</title>
 		</head>
 		<body>
-			<!--hyper link & External link in html -->
+			<!--hyper link(External link (agar ham kis bhi hyper link per tap kare or vo kisi dusre page per khule use extrnal hpyer link kehte hai ))in html -->
 			<h1>
 			<a href="raman.jpg">Raman Thakur</a></h1><!--here a is called anker and href called hyperlink linked --> 
 			
