--- a/Tutor Class/HTML Tutorial/Untitled-1.html
+++ b/Tutor Class/HTML Tutorial/Untitled-1.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <title>Fullscreen Image</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+    }
+    img {
+      display: block;
+      width: 100vw;
+      height: 100vh;
+      object-fit: cover; /* or 'contain' if you want full visibility */
+    }
+  </style>
 </head>
 <body>
-    <div style="position:relative; width:100%; padding-top:56.25%;">
-  <video style="position:absolute; top:0; left:0; width:100%; height:100%;" controls>
-    <source src="Untitled video - Made with Clipchamp.mp4" type="video/mp4">
-  </video>
-</div>
-
+  <img src="best-smart-TVs-in-india.webp" alt="Smart TVs">
 </body>
 </html>
